[build-system]
requires = ["robotpy-build", "robotpy-wpilib"]

[tool.robotpy-build]
base_package = "halsim"

# TODO: make this a namespace package?
[tool.robotpy-build.wrappers."halsim._impl"]

name = "halsim_gui"
artname = "halsim_gui"
baseurl = "https://frcmaven.wpi.edu/artifactory/release/edu/wpi/first/halsim"
version = "2020.1.2"

depends = ["wpilibc"]
libs = ["halsim_gui"]


[tool.robotpy-build.metadata]
name = "robotpy-halsim-gui"
description = "WPILib command framework"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-halsim-gui"
license = "BSD-3-Clause"
install_requires = [
    "robotpy-wpilib"
]