[build-system]
requires = ["robotpy-build", "robotpy-wpilib"]

[tool.robotpy-build]
base_package = "halsim"


[tool.robotpy-build.wrappers."halsim".maven_lib_download]
artifact_id = "halsim_gui"
group_id = "edu.wpi.first.halsim"
repo_url = "https://frcmaven.wpi.edu/artifactory/release"
version = "2020.1.2"

dlopenlibs = ["halsim_gui"]

# TODO: make this a namespace package?
[tool.robotpy-build.wrappers."halsim"]
name = "halsim_gui"
depends = ["wpilibc"]



[tool.robotpy-build.metadata]
name = "robotpy-halsim-gui"
description = "WPILib command framework"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-halsim-gui"
license = "BSD-3-Clause"
install_requires = [
    "robotpy-wpilib"
]