[build-system]
requires = ["robotpy-build", "robotpy-wpiutil"]

[tool.robotpy-build]
base_package = "hal"

[tool.robotpy-build.wrappers."hal._impl"]

name = "wpiHal"
artname = "hal-cpp"
baseurl = "https://first.wpi.edu/FRC/roborio/maven/release/edu/wpi/first/hal"
version = "2019.4.1"

sources = [
    "hal/_impl/hal.cpp"
]

generate = [
    { Accelerometer = "hal/Accelerometer.h" },
    { AnalogAccumulator = "hal/AnalogAccumulator.h" },
    { AnalogGyro = "hal/AnalogGyro.h" },
    { AnalogInput = "hal/AnalogInput.h" },
    { AnalogOutput = "hal/AnalogOutput.h" },
    { AnalogTrigger = "hal/AnalogTrigger.h" },
    { CANAPI = "hal/CANAPI.h" },
    { CANAPITypes = "hal/CANAPITypes.h" },
    { CAN = "hal/CAN.h" },
    #{ ChipObject = "hal/ChipObject.h" },
    { Compressor = "hal/Compressor.h" },
    { Constants = "hal/Constants.h" },
    { Counter = "hal/Counter.h" },
    { DIO = "hal/DIO.h" },
    { DriverStation = "hal/DriverStation.h" },
    { DriverStationTypes = "hal/DriverStationTypes.h" },
    { Encoder = "hal/Encoder.h" },
    # { Errors = "hal/Errors.h" },
    { Extensions = "hal/Extensions.h" },
    { FRCUsageReporting = "hal/FRCUsageReporting.h" },
    { HALBase = "hal/HALBase.h" },
    # { HAL = "hal/HAL.h" },
    { I2C = "hal/I2C.h" },
    { I2CTypes = "hal/I2CTypes.h" },
    { Interrupts = "hal/Interrupts.h" },
    { Notifier = "hal/Notifier.h" },
    { PDP = "hal/PDP.h" },
    { Ports = "hal/Ports.h" },
    { Power = "hal/Power.h" },
    { PWM = "hal/PWM.h" },
    { Relay = "hal/Relay.h" },
    { SerialPort = "hal/SerialPort.h" },
    { Solenoid = "hal/Solenoid.h" },
    { SPI = "hal/SPI.h" },
    { SPITypes = "hal/SPITypes.h" },
    { Threads = "hal/Threads.h" },
    #{ Types = "hal/Types.h" },
]

generation_data = "gen/data.yml"
depends = ["wpiutil"]

[tool.robotpy-build.metadata]
name = "robotpy-hal"
description = "Binary wrapper for FRC HAL"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-hal"
license = "BSD-3-Clause"
install_requires = [
    "robotpy-wpiutil"
]
